# lennyhub-rag

./: .env.example  .gitignore  GEMINI.md  QUERYING_WITH_SOURCES.md  RAG-CLI-TOOLS.md  README.md  build_transcript_rag_parallel.py  chainlit.md  chainlit_app.py  check_fastembed.py  implementation-plan.md  init_db.py  list_models.py  list_qdrant_collections.py  multimodal_processor.py  pyproject.toml  qdrant_config.py  qdrant_config.yaml  query_rag_with_chunks.py  query_with_sources.py  query_worker.py  requirements.txt  run_chainlit.sh  run_streamlit.sh  setup_rag.py  streamlit_app.py  tasks.md  test_rerank.py
apps/chat/: app.py
apps/explorer/: export.py  server.py
data/cutlefish.substack.com/: 20-things-ive-learned-as-a-systems-f95.md  bm153-the-empty-roadmap.md  north-star-framework-template-and.md  scoping-and-shaping-mini-book.md  tbm-1052-flow-of-novel-moments.md  tbm-1253-not-bau.md  tbm-1353-good-idea.md  tbm-1552-stop-hiring-things-to-do.md  tbm-1652-can-do-vs-should-do.md  tbm-1753-measuring-to-learn-vs-measuring.md  tbm-1852-product-manager-to-people.md  tbm-1853-blanks-slates-seedlings.md  tbm-1953-drivers-constraints-and.md  tbm-200-product-team-enabling-team.md  tbm-201-they-myth-of-quality-tradeoffs.md  tbm-203-fixing-messy-problems.md  tbm-204-40-roadmap-item-questions.md  tbm-205-process-vs-systems-and-habits.md  (+148 more)
docs/: FEATURES_EXPLAINED.md  QDRANT_STORAGE.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md
rag_storage/: kv_store_doc_status.json  kv_store_full_entities.json  kv_store_full_relations.json
scripts/: reorganize_substack_data.py  setup_rag.py
(+232 files in other folders)
